// Copyright 2019 SolarNetwork Foundation.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package solarnetwork.esi.domain;

option cc_enable_arenas = true;
option java_multiple_files = true;
option java_outer_classname = "PriceMapCharacteristicsProto";
option java_package = "net.solarnetwork.esi.domain";
option objc_class_prefix = "ESI";

import "google/protobuf/timestamp.proto";
import "solarnetwork/esi/domain/der_route.proto";
import "solarnetwork/esi/domain/price_map.proto";

// Characteristics of a price map.
message PriceMapCharacteristics {

  // The routing info.
  //
  // The MessageSignature of the route must include: the following:
  //
  // * `exchange_uid` UTF-8 bytes
  // * `facility_uid` UTF-8 bytes
  // * `price_map.power_components.real_power` big-endian encoded bytes
  // * `price_map.power_components.reactive_power` big-endian encoded bytes
  // * `price_map.duration.seconds` big-endian encoded bytes
  // * `price_map.duration.nanos` big-endian encoded bytes
  // * `price_map.response_time.min.seconds` big-endian encoded bytes
  // * `price_map.response_time.min.nanos` big-endian encoded bytes
  // * `price_map.response_time.max.seconds` big-endian encoded bytes
  // * `price_map.response_time.max.nanos` big-endian encoded bytes
  // * `price_map.price_components.currency_code` UTF-8 bytes
  // * `price_map.price_components.units` big-endian encoded bytes
  // * `price_map.price_components.nanos` big-endian encoded bytes
  DerRoute route = 1;

  // The price map on offer.
  PriceMap price_map = 2;

}
